--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,7 @@ h2 {
 }
 
 #header, #content {
-  margin-right: 150px;
+  margin-right: 80px;
   margin-left: 1em;
 }
 
@@ -70,6 +70,16 @@ h2 {
   left: 0;
   padding: 0.3em;
   padding-bottom: 0.1em;
+}
+
+#title {
+  margin-right: 80px;
+  height: 100%;
+  text-align: center;
+}
+
+#title h1 {
+  padding-top: 20%;
 }
 
 #llp-logo {
