--- a/public/views/slide.html
+++ b/public/views/slide.html
@@ -1,6 +1,6 @@
 <div id="header">
   <h1>{{currentSlide.title}}</h1>
-  <h2>{{currentSlide.subtitle}}</h2>
+  <h2 ng:show="currentSlide.subtitle">{{currentSlide.subtitle}}</h2>
 </div>
 <div id="content">
   {{currentSlide.content|html}}
