--- a/public/views/code.html
+++ b/public/views/code.html
@@ -4,7 +4,7 @@
 </div>
 <div id="content" ng:controller="TabsController">
   <div id="tabs">
-    <ul>
+    <ul class="tab-headers">
       <li ng:class="activeClass('demo')" ng:click="setActive('demo')">Demo</li>
       <li ng:class="activeClass('html')" ng:click="setActive('html')">HTML</li>
       <li ng:class="activeClass('js')" ng:click="setActive('js')">JS</li>
