--- a/public/views/code.html
+++ b/public/views/code.html
@@ -11,7 +11,7 @@
     </ul>
     <div class="clear"></div>
     <div class="body">
-      <div ng:show="isActive('demo')">
+      <div ng:show="isActive('demo')" my:right my:left>
         <div my:script="currentSlide.jsCode"></div>
         <div my:html="currentSlide.htmlCode"></div>
       </div>
