--- a/public/css/main.css
+++ b/public/css/main.css
@@ -148,3 +148,15 @@ h2 {
   clear: both;
 }
 
+.snippet pre {
+  font-family: monospace;
+  background-color: #ddd;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  padding: 1em;
+  max-height: 400px;
+  overflow: auto;
+  font-size: 0.8em;
+  margin-right: 30px;
+}
