--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,6 +27,7 @@ h2 {
 #header, #content {
   margin-right: 80px;
   margin-left: 1em;
+  z-index: 1;
 }
 
 #header {
@@ -38,7 +39,9 @@ h2 {
   bottom: 0;
   left: 0;
   width: 100%;
+  height: 1.5em;
   padding-bottom: 1em;
+  z-index: -1;
 }
 
 #footer h3 {
@@ -86,6 +89,10 @@ h2 {
   height: 350px;
   width: 75px;
   background: url('/images/llp-logo.png') top left no-repeat;
+}
+
+#content {
+  background-color: #f0f0f2;
 }
 
 #content ul {
